tests/integration/snapshots/integration__test_tune__monotonic_ints_tune.snap
---
source: tests/integration/test_tune.rs
expression: "&report_json"
---
{
  "column_profiles": [
    {
      "byte_entropy": null,
      "cardinality_estimate": "[cardinality_estimate]",
      "cardinality_method": "hyperloglog",
      "cardinality_ratio": "[cardinality_ratio]",
      "column_name": "id",
      "json_pattern_detected": false,
      "logical_type": null,
      "monotonicity_score": 1.0,
      "null_count_in_sample": 0,
      "null_fraction": 0.0,
      "physical_type": "INT64",
      "run_length_score": 0.0,
      "sample_fraction": 1.0,
      "sample_rows": 100000,
      "string_length_stats": null,
      "string_monotonicity_score": null,
      "total_file_rows": 100000,
      "uuid_pattern_detected": false
    }
  ],
  "columns": [
    {
      "cardinality_estimate": "[cardinality_estimate]",
      "cardinality_ratio": "[cardinality_ratio]",
      "caveats": [],
      "column_name": "id",
      "confidence": "High",
      "confidence_reason": "sample_fraction=1.000 >= 0.10 and sample_rows=100000 >= 100,000",
      "encoding_rule_fired": "DeltaMonotonic",
      "engine_compatibility": null,
      "full_explain": null,
      "impact_stars": 5,
      "logical_type": null,
      "null_fraction": 0.0,
      "physical_type": "INT64",
      "reason_brief": "monotonicity_score=1.000 >= threshold 0.90",
      "recommended_codec": "ZSTD",
      "recommended_codec_level": 3,
      "recommended_encoding": "DELTA_BINARY_PACKED"
    }
  ],
  "current_codec": "SNAPPY",
  "diagnostics": [
    {
      "cause_hypothesis": null,
      "column_name": "id",
      "current_codec": "SNAPPY",
      "current_compression_ratio": 1.663039583858597,
      "current_encodings": [
        "PLAIN",
        "RLE_DICTIONARY"
      ],
      "observation": "Current encoding and codec differs from recommendation (have: PLAIN,RLE_DICTIONARY + SNAPPY; recommend: DELTA_BINARY_PACKED + ZSTD:3).",
      "per_row_group_summary": null,
      "status": "Mismatch",
      "supporting_metric": "ratio=1.66×"
    }
  ],
  "engine": "unknown",
  "file_caveats": [],
  "file_path": "[file_path]",
  "file_profile": {
    "columns": [
      {
        "codec": "SNAPPY",
        "compressed_bytes": 602872,
        "compression_ratio": 1.663039583858597,
        "encodings": [
          "PLAIN",
          "RLE",
          "RLE_DICTIONARY"
        ],
        "logical_type": null,
        "max_value": "99999",
        "min_value": "0",
        "name": "id",
        "per_row_group_compressed_bytes": [
          602872
        ],
        "per_row_group_dict_page_bytes": [
          400262
        ],
        "per_row_group_encodings": [
          [
            "PLAIN",
            "RLE",
            "RLE_DICTIONARY"
          ]
        ],
        "per_row_group_uncompressed_bytes": [
          1002600
        ],
        "physical_type": "INT64",
        "statistics_available": true,
        "total_null_count": 0,
        "uncompressed_bytes": 1002600
      }
    ],
    "created_by": "parquet-rs version 55.2.0",
    "file_size_bytes": 603336,
    "num_row_groups": 1,
    "num_rows": 100000,
    "parquet_version": 1,
    "path": "tests/fixtures/monotonic_ints.parquet",
    "row_group_compressed_bytes": [
      602872
    ],
    "row_group_row_counts": [
      100000
    ]
  },
  "file_size_bytes": "[file_size_bytes]",
  "num_columns": 1,
  "num_rows": 100000,
  "options": {
    "a": {
      "caveats": [],
      "codec_description": "ZSTD:3",
      "label": "Balanced",
      "python_snippet": "PARQUET_WRITE_OPTIONS = {\n    \"compression\": \"zstd\",\n    \"compression_level\": 3,\n    \"column_encoding\": {\n        \"id\": \"DELTA_BINARY_PACKED\"\n    }\n}\npq.write_table(table, \"output.parquet\", **PARQUET_WRITE_OPTIONS)",
      "tradeoff": "Best balance of file size and read speed"
    },
    "b": {
      "caveats": [],
      "codec_description": "ZSTD:6",
      "label": "Smallest File",
      "python_snippet": "PARQUET_WRITE_OPTIONS = {\n    \"compression\": \"zstd\",\n    \"compression_level\": 6,\n    \"column_encoding\": {\n        \"id\": \"DELTA_BINARY_PACKED\"\n    }\n}\npq.write_table(table, \"output.parquet\", **PARQUET_WRITE_OPTIONS)",
      "tradeoff": "Smallest file; slower writes, slightly slower reads than ZSTD:3"
    },
    "c": {
      "caveats": [
        {
          "message": "Known bug in parquet-go: LZ4 + DELTA_BINARY_PACKED produces unreadable files. Use SNAPPY if your reader uses the parquet-go library.",
          "severity": "Warning"
        }
      ],
      "codec_description": "LZ4",
      "label": "Fastest Reads",
      "python_snippet": "PARQUET_WRITE_OPTIONS = {\n    \"compression\": \"lz4\",\n    \"column_encoding\": {\n        \"id\": \"DELTA_BINARY_PACKED\"\n    }\n}\npq.write_table(table, \"output.parquet\", **PARQUET_WRITE_OPTIONS)",
      "tradeoff": "Fastest decompression; files are slightly larger than ZSTD"
    }
  },
  "overall_confidence": "High",
  "predicted_read_speedup": 1.0913043478260869,
  "predicted_size_reduction_pct": 13.043478260869556,
  "priority": "balanced",
  "python_snippet": "",
  "row_group_advisory": {
    "advice": "Row group size 1 MB is below the 64–256 MB recommendation for general workloads. Small row groups reduce compression effectiveness and increase predicate pushdown overhead.",
    "current_avg_mb": 0.5749435424804688,
    "current_max_mb": 0.5749435424804688,
    "current_min_mb": 0.5749435424804688,
    "is_within_recommendation": false,
    "recommended_range_mb": [
      64.0,
      256.0
    ],
    "workload_label": "general workloads"
  },
  "sample_fraction": 1.0,
  "scan_time_ms": "[scan_time_ms]",
  "sort_advisory": {
    "advice": "Column(s) [\"id\"] appear sorted (monotonicity_score > 0.95) but no sort order is declared in the file metadata. Declaring sort order enables better predicate pushdown.",
    "declared_sort_columns": [],
    "inferred_sort_candidates": [
      "id"
    ]
  },
  "spark_snippet": ""
}
